--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@astrojs/preact": "^0.5.2",
     "@astrojs/tailwind": "^0.2.5",
+    "@tailwindcss/typography": "^0.5.4",
     "astro": "^1.0.0-rc.1",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.2",
