--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/image": "^0.3.0",
+    "@astrojs/mdx": "^0.4.0",
     "@astrojs/preact": "^0.5.2",
     "@astrojs/tailwind": "^0.2.5",
     "@tailwindcss/typography": "^0.5.4",
-    "astro": "^1.0.0-rc.1",
+    "astro": "^1.0.0-rc.3",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.2",
     "prettier-plugin-tailwindcss": "^0.1.13"
