--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     // Enable stricter transpilation for better output.
     "isolatedModules": true,
     // Add type definitions for our Astro runtime.
-    "types": ["astro/client"]
+    "types": ["@astrojs/image/client"]
   }
 }
